# djangocraft_cli

./: .deepsource.toml  .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
data/: for_fieldslist.txt  for_registerhtml.txt  for_views.txt  fro_urls_root.txt
src/djangocraft/: __main__.py
src/djangocraft.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
