[project]
name = "djangocraft"
version = "1.0.1"
description = "A easy way to setup your projects with a easy pre-built authentication"
authors = [
    {name = "Yash", email = "yashraj504300@gmail.com"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

dependencies =[ "typer[all]>=0.9.0" ]
requires-python = ">3.6"
readme = "README.md"
license = {file = "LICENSE"}

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[project.urls]
Homepage = "https://github.com/YashRaj1506/djangocraft"

[project.scripts]
djangocraft = "djangocraft.__main__:app"

